--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "emailjs-com": "^2.4.1",
     "netlify": "^4.1.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
